add api intergration and test for the same

--- a/Template/Base.lproj/Localizable.strings
+++ b/Template/Base.lproj/Localizable.strings
@@ -6,3 +6,7 @@
   
 */
 "Welcome"="Welcome";
+"Search"="Search";
+"Search Songs"="Search Songs";
+"You haven't searched anything yet"="You haven't searched anything yet";
+"No results found"="No results found";
