--- a/Template/de.lproj/Localizable.strings
+++ b/Template/de.lproj/Localizable.strings
@@ -6,3 +6,7 @@
   
 */
 "Welcome"="Willkommen";
+"Search"="Suche";
+"Search Songs"="Lieder suchen";
+"You haven't searched anything yet"="Du hast noch nichts gesucht";
+"No results found"="keine Ergebnisse gefunden";
