Updated app contents based on generated resources by swifgen

--- a/Template/Base.lproj/Localizable.strings
+++ b/Template/Base.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "Search Songs"="Search Songs";
 "You haven't searched anything yet"="You haven't searched anything yet";
 "No results found"="No results found";
+"What would you like to hear?" = "What would you like to hear?";
