--- a/Template/de.lproj/Localizable.strings
+++ b/Template/de.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "Search Songs"="Lieder suchen";
 "You haven't searched anything yet"="Du hast noch nichts gesucht";
 "No results found"="keine Ergebnisse gefunden";
+"What would you like to hear?" = "Was möchten Sie hören?";
